--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@types/lodash.template": "^4.5.3",
+    "@types/prismjs": "^1.26.5",
     "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.14",
     "canvas-confetti": "^1.9.3",
@@ -84,6 +85,7 @@
     "octokit": "^4.0.2",
     "postcss": "8.4.39",
     "posthog-js": "^1.200.0",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "19.1.0",
