--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "preinstall": "npx only-allow pnpm",
     "dev": "concurrently \"content-collections watch\" \"next dev --turbo\"",
     "prebuild": "pnpm build:registry && pnpm build:docs",
-    "build": "next build",
-    "build:registry": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts && prettier --loglevel silent --write \"registry/**/*.{ts,tsx,mdx}\" --cache",
+    "build": "next build --turbopack",
+    "build:registry": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts && prettier --log-level silent --write \"registry/**/*.{ts,tsx,mdx}\" --cache",
     "build:docs": "content-collections build",
     "typecheck": "pnpm build:docs && tsc --noEmit",
     "start": "next start",
